--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                                 <a href="" class="dropdown-item">Baby's Dresses</a>
                             </div>
                         </div> -->
-                        <a href="" class="nav-item nav-link">Silk Saree</a>
-                        <a href="" class="nav-item nav-link">Soft Silk Saree</a>
-                        <a href="" class="nav-item nav-link">Cotton Saree</a>
-                        <a href="" class="nav-item nav-link">Banarasi Saree</a>
-                        <a href="" class="nav-item nav-link">Mysore Silk Saree</a>
-                        <a href="" class="nav-item nav-link">Kanjivaram Silk Saree</a>
-                        <a href="" class="nav-item nav-link">Chiffon Saree</a>
-                        <a href="" class="nav-item nav-link">Kanchipuram Saree</a>
+                        <a href="#silk-saree-section" class="nav-item nav-link">Silk Saree</a>
+                        <a href="#soft-silk-section" class="nav-item nav-link">Soft Silk Saree</a>
+                        <a href="#cotton-saree-section" class="nav-item nav-link">Cotton Saree</a>
+                        <a href="#banarasi-saree-section" class="nav-item nav-link">Banarasi Saree</a>
+                        <a href="#Mysore-Silk-Saree-section" class="nav-item nav-link">Mysore Silk Saree</a>
+                        <a href="#Kanjivaram-Saree-section" class="nav-item nav-link">Kanjivaram Silk Saree</a>
+                        <a href="#Chiffon-Saree-section" class="nav-item nav-link">Chiffon Saree</a>
+                        <a href="#Kanjiparam-Saree-section" class="nav-item nav-link">Kanchipuram Saree</a>
                     </div>
                 </nav>
             </div>
@@ -221,78 +221,78 @@
 
 
     <!-- Categories Start -->
-    <div class="container-fluid pt-5">
+    <div id="silk-saree-section" class="container-fluid pt-5">
         <div class="row px-xl-5 pb-3">
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">Collections</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/silk saree.jpg" alt="">
+                        <img herf="" class="img-fluid" src="img/silk saree.jpg" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Silk Saree</h5>
                 </div>
-            </div>
+            </div>    
             <div class="col-lg-4 col-md-6 pb-1">
-                <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+                <div id="soft-silk-section" class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Prod</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/softsilk.jpeg" alt="" style="width: 500px;height: 322px;">
+                        <img herf=""class="img-fluid" src="img/softsilk.jpeg" alt="" style="width: 500px;height: 368px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Soft Silk Saree</h5>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 pb-1">
-                <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
+                <div id="cotton-saree-section"class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/cotton saree.png" alt="">
+                        <img herf=""class="img-fluid" src="img/cotton saree.png" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Cotton Saree</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-1">
+            <div id="banarasi-saree-section"class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/banarasi saree.png" alt="" style="width: 500px;height: 322px;">
+                        <img herf="" class="img-fluid" src="img/banarasi saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Banarasi Saree</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-1">
+            <div id="Mysore-Silk-Saree-section"class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/mysore silk.png" alt="" style="width: 500px;height: 322px;">
+                        <img herf=""class="img-fluid" src="img/mysore silk.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Mysore Silk Saree</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-1">
+            <div id="Kanjivaram-Saree-section"class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/kanjivaram silk.jpg" alt="" style="width: 500px;height: 322px;">
+                        <img herf=""class="img-fluid" src="img/kanjivaram silk.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Kanjivaram Saree</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-1">
+            <div id="Chiffon-Saree-section"class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/chiffon saree.jpg" alt="" style="width: 500px;height: 322px;">
+                        <img herf=""class="img-fluid" src="img/chiffon saree.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Chiffon Saree</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 pb-1">
+            <div id="Kanjiparam-Saree-section"class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
+                        <img herf=""class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
-                    <h5 class="font-weight-semi-bold m-0">Kanjivaram Saree</h5>
+                    <h5 class="font-weight-semi-bold m-0">Kanjiparam Saree</h5>
                 </div>
             </div>
         </div>
