--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">Collections</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="silk-saree-collection.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/silk saree.jpg" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Silk Saree</h5>
@@ -235,16 +235,16 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Prod</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="Soft-Silk-Saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/softsilk.jpeg" alt="" style="width: 500px;height: 322px;">
-                    </a>
+                    </a>                    
                     <h5 class="font-weight-semi-bold m-0">Soft Silk Saree</h5>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="Cotton-Saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/cotton saree.png" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Cotton Saree</h5>
@@ -253,7 +253,7 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="Banarasi-Saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/banarasi saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Banarasi Saree</h5>
@@ -262,7 +262,7 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="mysore-silk.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/mysore silk.png" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Mysore Silk Saree</h5>
@@ -271,7 +271,7 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="kanjivaram-silk.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/kanjivaram silk.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Kanjivaram Saree</h5>
@@ -280,7 +280,7 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="Chiffon-Saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/chiffon saree.jpg" alt="" style="width: 500px;height: 322px;">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Chiffon Saree</h5>
@@ -289,10 +289,10 @@
             <div class="col-lg-4 col-md-6 pb-1">
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <!-- <p class="text-right">15 Products</p> -->
-                    <a href="" class="cat-img position-relative overflow-hidden mb-3">
+                    <a href="kanjipuram-saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
-                    <h5 class="font-weight-semi-bold m-0">Kanjivaram Saree</h5>
+                    <h5 class="font-weight-semi-bold m-0">Kanjiparam Saree</h5>
                 </div>
             </div>
         </div>
