--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <a href="" class="nav-item nav-link">Mysore Silk Saree</a>
                         <a href="" class="nav-item nav-link">Kanjivaram Silk Saree</a>
                         <a href="" class="nav-item nav-link">Chiffon Saree</a>
-                        <a href="" class="nav-item nav-link">Kanchipuram Saree</a>
+                        <a href="" class="nav-item nav-link">kanchipuram Saree</a>
                     </div>
                 </nav>
             </div>
@@ -292,7 +292,7 @@
                     <a href="kanjipuram-saree.html" class="cat-img position-relative overflow-hidden mb-3">
                         <img class="img-fluid" src="img/kanjipuram saree.png" alt="" style="width: 500px;height: 322px;">
                     </a>
-                    <h5 class="font-weight-semi-bold m-0">Kanjipuram Saree</h5>
+                    <h5 class="font-weight-semi-bold m-0">kanchipuram Saree</h5>
                 </div>
             </div>
         </div>
